// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Blog Post does not render category when not provided 1`] = `
<div
  className="layoutMock"
>
  <div
    className="css-43plg"
  >
    <div
      className="css-1qfp07i"
    >
      <article
        className="h-entry c1v0-blog-post"
        id="mock-post-id"
      >
        <h1
          className="p-name css-1sus4jf"
        >
          A Mock Blog Post
        </h1>
        <div
          className="css-1pa74su"
        >
          <time
            className="dt-published created"
          >
            Published 
            Mon, 17 Jun 2024 03:30:26 GMT
          </time>
        </div>
        <div
          style={
            {
              "display": "none",
            }
          }
        >
          <a
            className="u-url"
            href="https://example.com/blog/mock-post"
          />
          <span
            className="u-uid"
          >
            mock-post-id
          </span>
          <div
            className="p-summary"
          >
            This is a mock description
          </div>
          <img
            alt=""
            className="u-photo"
            src="mock-banner.jpg"
          />
          <span
            className="p-category"
          >
            mock
          </span>
          <span
            className="p-category"
          >
            test
          </span>
          <span
            className="p-category"
          >
            blog
          </span>
        </div>
        <div
          className="e-content article-content"
        >
          <div>
            Lorum ipsum dolor sit amet.
          </div>
        </div>
      </article>
    </div>
  </div>
</div>
`;

exports[`Blog Post matches the snapshot 1`] = `
<div
  className="layoutMock"
>
  <div
    className="css-43plg"
  >
    <div
      className="css-1qfp07i"
    >
      <article
        className="h-entry c1v0-blog-post"
        id="mock-post-id"
      >
        <div
          className="css-1blzwpa"
        >
          Mock category
        </div>
        <h1
          className="p-name css-1sus4jf"
        >
          A Mock Blog Post
        </h1>
        <div
          className="css-1pa74su"
        >
          <time
            className="dt-published created"
          >
            Published 
            Mon, 17 Jun 2024 03:30:26 GMT
          </time>
        </div>
        <div
          style={
            {
              "display": "none",
            }
          }
        >
          <a
            className="u-url"
            href="https://example.com/blog/mock-post"
          />
          <span
            className="u-uid"
          >
            mock-post-id
          </span>
          <div
            className="p-summary"
          >
            This is a mock description
          </div>
          <img
            alt=""
            className="u-photo"
            src="mock-banner.jpg"
          />
          <span
            className="p-category"
          >
            Mock Category
          </span>
          <span
            className="p-category"
          >
            mock
          </span>
          <span
            className="p-category"
          >
            test
          </span>
          <span
            className="p-category"
          >
            blog
          </span>
        </div>
        <div
          className="e-content article-content"
        >
          <div>
            Lorum ipsum dolor sit amet.
          </div>
        </div>
      </article>
    </div>
  </div>
</div>
`;

exports[`Blog Post renders Seo component with the correct props 1`] = `
<div
  className="seoMock"
/>
`;
